--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "axios": "^1.6.0",
+    "express": "~4.18.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@nx/esbuild": "19.6.5",
     "@nx/eslint": "19.6.5",
     "@nx/eslint-plugin": "19.6.5",
     "@nx/jest": "19.6.5",
     "@nx/js": "19.6.5",
+    "@nx/node": "^19.6.5",
     "@nx/react": "19.6.5",
     "@nx/vite": "19.6.5",
     "@nx/web": "19.6.5",
@@ -23,6 +29,7 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@testing-library/react": "15.0.6",
+    "@types/express": "~4.17.13",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@types/react": "18.3.1",
@@ -32,6 +39,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/ui": "^1.3.1",
     "babel-jest": "^29.7.0",
+    "esbuild": "^0.19.2",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "2.27.5",
@@ -40,6 +48,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jsdom": "~22.1.0",
     "nx": "19.6.5",
     "prettier": "^2.6.2",
