--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "axios": "^1.6.0",
+    "dotenv": "^16.4.5",
     "express": "~4.18.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -14,6 +15,8 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@nx/esbuild": "19.6.5",
     "@nx/eslint": "19.6.5",
     "@nx/eslint-plugin": "19.6.5",
@@ -56,6 +59,7 @@
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
     "vite": "^5.0.0",
+    "vite-plugin-dts": "~3.8.1",
     "vitest": "^1.3.1"
   }
 }
