--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@react-spring/web": "^9.7.4",
     "axios": "^1.6.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
